--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h1 class="welcome">Hello, friend!</h1>
                     <h5 class="paragraph">come on in and enjoy with your friends inside and register now</h5>
                     <div class="sign-up-page">
-                        <a href="../sign up to we here/index.html">sign up</a>
+                        <a href="https://ziadahmedfawzy.github.io/sign_up_we-here/">sign up</a>
                     </div>
                 </div>
             </div>
